--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main class="main">
       <div class="scoreboard">
-        <h2 class="score-info" id="scoreInfo">Choose your weapon</h2>
+        <h2 class="score-info" id="scoreInfo">Your turn!</h2>
         <h3 class="score-message" id="scoreMessage">
           First to score 5 points wins the game
         </h3>
@@ -56,9 +56,9 @@
         <script>
           document.write(new Date().getFullYear())
         </script>
-        michalosman
+        jla505
       </p>
-      <a href="https://github.com/michalosman" target="_blank">
+      <a href="https://github.com/jla505" target="_blank">
         <i class="fab fa-github"></i
       ></a>
     </footer>
